# swagger.json
@@ -10,6 +10,17 @@
   "schemes": [
     "https"
   ],
+  "securityDefinitions": {
+    "oauth2": {
+      "type": "oauth2",
+      "authorizationUrl": "https://github.com/login/oauth/authorize",
+      "flow": "implicit",
+      "scopes": {
+        "read": "read",
+        "write": "write"
+      }
+    }
+  },
   "paths": {
     "/": {
       "get": {
